# supercolor

./: Cargo.toml  shell.nix
src/: builtins.rs  main.rs  print.rs
src/art/: creature.txt  hashbang.txt
