[package]
name = "supercolor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
colored = "2"
pad = "0.1"
rand = "0.8.5"
strum = { version = "0.24.1", features = ["derive"] }
